--- a/R1.md
+++ b/R1.md
@@ -32,3 +32,13 @@
 **Link(s) to work**
 1. [Started with Applied visual Design here is the link:-](https://learn.freecodecamp.org/responsive-web-design/applied-visual-design/create-visual-balance-using-the-text-align-property)
 2. [Completed till Adjusting the tone of a color here is the link:-](https://learn.freecodecamp.org/responsive-web-design/applied-visual-design/adjust-the-tone-of-a-color)
+
+
+### Day 2: August 2, Thursday
+
+**Today's Progress**: I've completed Applied visual Design exercises at FreeCodeCamp.
+
+**Thoughts** I am feeling Good learned and revised so many small concept
+
+**Link(s) to work**
+1. [Completed Applied visual Design here is the link:-](https://learn.freecodecamp.org/responsive-web-design/applied-visual-design/make-motion-more-natural-using-a-bezier-curve)
