--- a/R1.md
+++ b/R1.md
@@ -34,6 +34,7 @@
 2. [Completed till Adjusting the tone of a color here is the link:-](https://learn.freecodecamp.org/responsive-web-design/applied-visual-design/adjust-the-tone-of-a-color)
 
 
+
 ### Day 2: August 2, Thursday
 
 **Today's Progress**: I've completed Applied visual Design exercises at FreeCodeCamp.
@@ -42,3 +43,13 @@
 
 **Link(s) to work**
 1. [Completed Applied visual Design here is the link:-](https://learn.freecodecamp.org/responsive-web-design/applied-visual-design/make-motion-more-natural-using-a-bezier-curve)
+
+
+### Day 3: August 3, Friday
+
+**Today's Progress**: I've started and completed Applied Accessibility exercises at FreeCodeCamp.
+
+**Thoughts** I woke early morning and started coding feeling energitic 
+
+**Link(s) to work**
+1. [Started and completed Applied Accessibility here is the link:-](https://learn.freecodecamp.org/responsive-web-design/applied-accessibility)
