--- a/R1.md
+++ b/R1.md
@@ -53,3 +53,15 @@
 
 **Link(s) to work**
 1. [Started and completed Applied Accessibility here is the link:-](https://learn.freecodecamp.org/responsive-web-design/applied-accessibility)
+
+
+### Day 4: August 4, Saturday
+
+**Today's Progress**: I've completed Applied Responsive web design principles at FreeCodeCamp.
+
+**Thoughts** Learned how to align width to all devices using media query feeling sleepy today
+
+**Link(s) to work**
+1. [Completed Responsive web design principle here is the link:-](https://learn.freecodecamp.org/responsive-web-design/responsive-web-design-principles/make-typography-responsive)
+
+
