--- a/R1.md
+++ b/R1.md
@@ -65,3 +65,11 @@
 1. [Completed Responsive web design principle here is the link:-](https://learn.freecodecamp.org/responsive-web-design/responsive-web-design-principles/make-typography-responsive)
 
 
+### Day 5: August 4, Sunday
+
+**Today's Progress**: I've completed Applied CSS Flexbox at FreeCodeCamp.
+
+**Thoughts** Learned few flexbox properties like flex-shrink, flex-grow but still need to practise
+
+**Link(s) to work**
+1. [Completed CSS Flexbox here is the link:-](https://learn.freecodecamp.org/responsive-web-design/css-flexbox)
