--- a/R1.md
+++ b/R1.md
@@ -65,7 +65,7 @@
 1. [Completed Responsive web design principle here is the link:-](https://learn.freecodecamp.org/responsive-web-design/responsive-web-design-principles/make-typography-responsive)
 
 
-### Day 5: August 4, Sunday
+### Day 5: August 5, Sunday
 
 **Today's Progress**: I've completed Applied CSS Flexbox at FreeCodeCamp.
 
@@ -73,3 +73,13 @@
 
 **Link(s) to work**
 1. [Completed CSS Flexbox here is the link:-](https://learn.freecodecamp.org/responsive-web-design/css-flexbox)
+
+
+### Day 6: August 7, Tuesday
+
+**Today's Progress**: I've started to learn Flexbox from wes bos flexbox.io .
+
+**Thoughts** Learned few flexbox properties and practiced but still need complete few.
+
+**Link(s) to work**
+1. [Started CSS Flexbox here is the link:-](https://flexbox.io/)
